2008-04-16  David Smith  <dsmith@redhat.com>

	* task_finder.c (__stp_get_mm_path): Made kernel 2.6.18 changes.

2008-04-15  David Smith  <dsmith@redhat.com>

	PR 5961 (partial)
	* task_finder.c (stap_start_task_finder): When an interesting
	thread is found that is already running, make sure to set up
	thread death notification.

2008-04-15  hunt  <hunt@redhat.com>
	* print.c (_stp_pbuf_full): Delete. 
	
2008-04-15  hunt  <hunt@redhat.com>	
	* stack-x86_64.c (_stp_stack_print_fallback): Add levels.
	(__stp_stack_print): Count levels properly.

2008-04-15  Martin Hunt  <hunt@redhat.com>

	Finish support for limits on backtrace depth.
	* runtime.h (MAXTRACE): Default to 20.
	* stack.c (_stp_stack_print): Call __stp_stack_print
	with levels set properly.
	* sym.c (_stp_func_print): Return a value indicating 
	if something was printed.

	Support for i386 and x86_64 on 2.6.25 kernel
	* unwind/i386.h: Support unified registers on 2.6.25.
	Remove unused frame stuff, including STACK_*.
	* stack-i386.c (__stp_stack_print): Support unified
	registers on 2.6.25.
	* regs.h (REG_FP): Define for i386.

2008-04-15  Frank Ch. Eigler  <fche@elastic.org>

	PR 6410.
	* unwind.c, unwind.h: Make body conditional in STP_USE_DWARF_UNWINDER.
	* stack-x86_64.c (__stp_stack_print): Tolerate !unwinder.

2008-04-15  Frank Ch. Eigler  <fche@elastic.org>

	PR 6405
	* autoconf-module-nsections.c: New file.

2008-04-15  Frank Ch. Eigler  <fche@elastic.org>

	* unwind/i386.h (STACK_BOTTOM, STACK_TOP): Comment out these
	unused definitions, for they collide with some kernels
	(2.6.25-0.121.rc5.git4 rawhide).

2008-04-13  Frank Ch. Eigler  <fche@elastic.org>

	* print.c (_stp_pbuf_full): New function to note full print buffer.
	* stack-{i386,x86_64}.c: Use it in all stack-searching loops, to
	impose another limit against unbounded iteration.

2008-03-31  Martin Hunt  <hunt@redhat.com>

	* runtime.h (STP_USE_DWARF_UNWINDER): Define.

2008-04-04  Masami Hiramatsu <mhiramat@redhat.com>

	PR 6028